css to wrap full page images in divs to get figcaptions displaying correctly

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -36,7 +36,7 @@ figcaption p + p{
 	text-indent: 0;
 }
 
-figure.full-page{
+.full-page{
 	break-after: page;
 	break-before: page;
 	break-inside: avoid;
@@ -46,13 +46,13 @@ figure.full-page{
 }
 
 @supports(display: flex) and (max-height: 100vh){
-	figure.full-page{
+	.full-page{
 		display: flex;
 		flex-direction: column;
 		max-height: 100vh;
 	}
 
-	figure.full-page img{
+	.full-page img{
 		height: 100%;
 	}
 }
